fix 2nd scrollbar and removed white strip from bottom

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -1,8 +1,17 @@
 body {
     background-color: var(--background);
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
-
+div#root {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
 
 .header-navigation {
     display: flex;
@@ -230,5 +239,10 @@ header {
 
 
 
+
+}
+
+main {
+    height: calc(100vh - 70px) !important;
 
 }
